Remove "obsolete" directories and scripts (#41)